workloads/domains/users/base/deployment-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-grpc
  namespace: users
  labels:
    app: users-api-grpc
    version: v1
    tier: business-logic
    domain: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api-grpc
      version: v1
  template:
    metadata:
      labels:
        app: users-api-grpc
        version: v1
        tier: business-logic
        domain: users
    spec:
      containers:
      - name: users-api-grpc
        image: docker.io/mng990/eco2:users-api-dev-latest
        imagePullPolicy: Always
        command: [python, -m, users.presentation.grpc.server]
        ports:
        - containerPort: 50051
          name: grpc
        livenessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '1'
            memory: 512Mi
      imagePullSecrets:
      - name: dockerhub-secret
      nodeSelector:
        domain: users
      tolerations:
      - key: domain
        operator: Equal
        value: users
        effect: NoSchedule
