workloads/domains/users/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  namespace: users
  labels:
    app: users-api
    version: v1
    tier: business-logic
    domain: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
      version: v1
  template:
    metadata:
      labels:
        app: users-api
        version: v1
        tier: business-logic
        domain: users
    spec:
      containers:
      - name: users-api
        image: docker.io/mng990/eco2:users-api-dev-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '1'
            memory: 512Mi
      imagePullSecrets:
      - name: dockerhub-secret
      nodeSelector:
        domain: users
      tolerations:
      - key: domain
        operator: Equal
        value: users
        effect: NoSchedule
